[package]
name = "croco"
author = "Alex Al-Saffar"
version = "0.1.0"
edition = "2021"
description = "High-level library on top of Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-modules = "0.5.10"
dirs = "4.0.0"
glob = "0.3.0"
opener = "0.5.0"
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
